testsuite/tests/profiling/should_fail/T17916.stderr

T17916.hs:6:13: error:
    parse error on input ‘CapitalCase’ (possibly incorrect indentation or mismatched brackets)
